# asfl

./: .gitignore  20rd.txt  FedAcc.txt  FedFuzz.txt  README.md  bigscript.sh  fed_acc.txt  fed_avg.txt  fed_cad.txt  fed_double.txt  log.txt  monitor.py  out.txt  push-up.sh  pyproject.toml  requirements.txt  seeded.py  single.py  test.py  visualizetriple.py
.github/: Acc75Trim.eps  Accuracy45.eps  v75final.eps  v75trim.eps  v81acc.eps
archive/: clickable.py  curve.py  diff.py  dir.py  disperse.py  huge.py  log.txt  numerical.py  plot.py  present.py  reader.py  squishy.py  stable.py  thick.py  wma.py
archive/plots/: curve.py
archive/v1/: FedAcc-out.csv  FedAcc.txt  FedAvg-out.csv  FedAvg.txt  FedEqual-out.csv  FedEqual.txt  FedFuzz-out.csv  FedFuzz.txt  FedLoss-out.csv  FedLoss.txt  fed_trust-out.csv  fed_trust.txt  i.yaml
archive/v10/: fed_adaptive-out.csv  fed_adaptive.txt  fed_avg-out.csv  fed_avg.txt  i.yaml
archive/v11/: fed_adaptive-out.csv  fed_adaptive.txt  fed_avg-out.csv  fed_avg.txt  i.yaml
archive/v12/: fed_adaptive-out.csv  fed_adaptive.txt  fed_adaptive_trim-out.csv  fed_adaptive_trim.txt  fed_avg-out.csv  fed_avg.txt  fed_trim-out.csv  fed_trim.txt  i.yaml
archive/v13/: fed_adaptive-out.csv  fed_adaptive.txt  fed_avg-out.csv  fed_avg.txt  i.yaml
archive/v14/: fed_adaptive.txt  fed_avg.txt  fed_cad.txt  i.yaml
archive/v15/: fed_adaptive-out.csv  fed_adaptive.txt  fed_avg-out.csv  fed_avg.txt  fed_cad-out.csv  fed_cad.txt  i.yaml
archive/v16/: fed_adaptive.txt  fed_avg.txt  fed_cad.txt  i.yaml
archive/v17/: fed_adaptive.txt  fed_avg.txt  fed_cad.txt  i.yaml
archive/v18/: fed_avg-out.csv  fed_avg.txt  fed_cad-out.csv  (+2 more)
asfl/: __init__.py  adaptive_agg.py  agg.py  client_app.py  dvsaa_afl.py  fedcustom.py  federal_avg.py  poisson.py  server_app.py  task.py
scripts/: many.sh  out.py  out.txt  summary.py
(+524 files in other folders)
