[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asfl"
version = "1.0.0"
description = ""
dependencies = [
    "flwr[simulation]>=1.9.0,<2.0",
    "flwr-datasets[vision]>=0.0.2,<1.0.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hjc"

[tool.flwr.app.components]
serverapp = "asfl.server_app:app"
clientapp = "asfl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
local-epochs = 1
strat-mode = "fed_acc" # valid choices: "fed_avg", fed_agg", "fed_acc", "fed_loss", "fed_fuzz"
inplace = true
file-writing = true
adv-logs = false
log-path = "FedEqualLarge.txt"
partition = "dirichlet"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
